--- a/.ci/azure/linux_ngraph_onnx.yml
+++ b/.ci/azure/linux_ngraph_onnx.yml
@@ -121,7 +121,6 @@ jobs:
       sudo docker run \
         --name openvino-onnx-ci-container \
         --volume $(MODELS_DIR)/models_data/model_zoo/onnx_model_zoo_$(ONNX_MODEL_ZOO_SHA):/root/.onnx/model_zoo/onnx_model_zoo \
-        --volume $(MODELS_DIR)/msft:/root/.onnx/model_zoo/MSFT \ 
-        --env CI=true openvino-onnx-ci-image \
+        --volume $(MODELS_DIR)/msft:/root/.onnx/model_zoo/MSFT openvino-onnx-ci-image \
         /bin/bash -c "$(TOX_COMMAND)"
     displayName: 'Docker run $(BUILD_TYPE)'
