--- a/samples/python/llm/requirements.txt
+++ b/samples/python/llm/requirements.txt
@@ -1,17 +1,16 @@
-openvino-dev
-git+https://github.com/huggingface/optimum-intel.git@4b8ed2404abf4408a16d251870a8deb25a4c448b
-torch
-torchvision
-numpy==1.23.5
-# The function of collecting latency data for Pytorch model requires the version of transformers >= 4.28.0
-transformers>=4.28.0,<=4.33.3
-tokenizers==0.13.3
-diffusers==0.20.2
+numpy
+openvino>=2023.1.0
 pillow
+torch
+transformers>=4.28.0,<=4.33.3
+tokenizers<0.14.0    # for chatglm-6b
+diffusers
+optimum
+git+https://github.com/huggingface/optimum-intel.git@4b8ed2404abf4408a16d251870a8deb25a4c448b
+git+https://github.com/openvinotoolkit/nncf.git
+packaging
+psutil
 timm
 tiktoken
-onnx==1.14.0
-protobuf==4.23.4
-onnxruntime
+onnx
 einops
-defusedxml
