--- a/.github/workflows/windows_conditional_compilation.yml
+++ b/.github/workflows/windows_conditional_compilation.yml
@@ -4,14 +4,14 @@ on:
   schedule:
     # run daily at 00:00
     - cron: '0 0 * * *'
-#  pull_request:
-#    paths-ignore:
-#      - '**/docs/**'
-#      - 'docs/**'
-#      - '**/**.md'
-#      - '**.md'
-#      - '**/layer_tests_summary/**'
-#      - '**/conformance/**'
+  pull_request:
+    paths-ignore:
+      - '**/docs/**'
+      - 'docs/**'
+      - '**/**.md'
+      - '**.md'
+      - '**/layer_tests_summary/**'
+      - '**/conformance/**'
 #  push:
 #    paths-ignore:
 #      - '**/docs/**'
@@ -28,32 +28,25 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  CMAKE_BUILD_TYPE: 'Release'
-  CMAKE_GENERATOR: 'Ninja'
-  CMAKE_CXX_COMPILER_LAUNCHER: sccache
-  CMAKE_C_COMPILER_LAUNCHER: sccache
-  OPENVINO_REPO: "${{ github.workspace }}\\openvino"
-  OPENVINO_CONTRIB_REPO: "${{ github.workspace }}\\openvino_contrib"
-  INSTALL_DIR: "${{ github.workspace }}\\install_pkg"
-  INSTALL_TEST_DIR: "${{ github.workspace }}\\install\\tests"
-  SAMPLES_INSTALL_DIR: "${{ github.workspace }}\\install\\samples"
-  LAYER_TESTS_INSTALL_DIR: "${{ github.workspace }}\\install\\tests\\layer_tests"
-  BUILD_DIR: "${{ github.workspace }}\\build"
-  BUILD_DIR_2: "${{ github.workspace }}\\build_s"
-  MODELS_PATH: "${{ github.workspace }}\\testdata"
-  OV_TEMP: "${{ github.workspace }}\\openvino_temp"
-  BUILD_TYPE: "Release"
-  PYTHON_STATIC_ARGS: -m "not dynamic_library and not template_plugin"
-  VCVARSPATH: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\Auxiliary\\Build\\vcvarsall.bat"
+  PYTHON_VERSION: '3.11'
 
 jobs:
   Build:
-    # TODO: remove. Temporary measure to prevent the workflow from scheduling on forks.
-    if: ${{ github.repository_owner == 'openvinotoolkit' }}
     defaults:
       run:
         shell: pwsh
     runs-on: windows-latest-8-cores
+    env:
+      CMAKE_BUILD_TYPE: 'Release'
+      CMAKE_GENERATOR: 'Ninja Multi-Config'
+      CMAKE_CXX_COMPILER_LAUNCHER: sccache
+      CMAKE_C_COMPILER_LAUNCHER: sccache
+      OPENVINO_REPO: "${{ github.workspace }}\\openvino"
+      INSTALL_DIR: "${{ github.workspace }}\\openvino_install"
+      INSTALL_TEST_DIR: "${{ github.workspace }}\\tests_install"
+      BUILD_DIR: "${{ github.workspace }}\\openvino_build"
+      MODELS_PATH: "${{ github.workspace }}\\testdata"
+      SELECTIVE_BUILD_STAT_DIR: "${{ github.workspace }}\\selective_build_stat"
     steps:
       - name: Clone OpenVINO
         uses: actions/checkout@v4
@@ -75,21 +68,17 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Install build dependencies
-        run: |
-          choco install --no-progress ninja
+        run: choco install --no-progress ninja
 
       #
       # Build
       #
 
-      - name: Get number of CPU cores
-        uses: SimenB/github-actions-cpu-cores@v2
-        id: cpu-cores
-
-      - uses: ilammy/msvc-dev-cmd@v1
+      - name: Configure Developer Command Prompt for Microsoft Visual C++
+        uses: ilammy/msvc-dev-cmd@v1
 
       - name: Setup sccache
         uses: hendrikmuhs/ccache-action@v1.2
@@ -99,71 +88,145 @@ jobs:
           # Should save cache only if run in the master branch of the base repo
           # github.ref_name is 'ref/PR_#' in case of the PR, and 'branch_name' when executed on push
           save: ${{ github.ref_name == 'master' && 'true' || 'false'  }}
-          key: ${{ github.job }}-windows-cc
+          key: ${{ github.job }}-windows-itt
           restore-keys: |
-            ${{ github.job }}-windows-cc
+            ${{ github.job }}-windows-itt
+            ${{ github.job }}-${{ runner.os }}-common
 
-      - name: CMake CC COLLECT
+      - name: CMake configure - CC COLLECT
         run: |
-          & "${{ env.VCVARSPATH }}" x64 && cmake -G Ninja `
+          cmake -G "${{ env.CMAKE_GENERATOR }}" `
             -DENABLE_CPPLINT=OFF `
+            -DBUILD_SHARED_LIBS=OFF `
+            -DENABLE_TESTS=ON `
+            -DENABLE_NCC_STYLE=OFF `
+            -DENABLE_INTEL_GNA=OFF `
             -DENABLE_GAPI_PREPROCESSING=OFF `
-            -DENABLE_PLUGINS_XML=ON `
             -DCMAKE_COMPILE_WARNING_AS_ERROR=OFF `
-            -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} `
             -DENABLE_PROFILING_ITT=ON `
             -DSELECTIVE_BUILD=COLLECT `
             -S ${{ env.OPENVINO_REPO }} `
             -B ${{ env.BUILD_DIR }}
 
-      - name: Build CC COLLECT
+      - name: Cmake build - CC COLLECT
         run: |
-          & "${{ env.VCVARSPATH }}" x64 && cmake --build ${{ env.BUILD_DIR }} --parallel ${{ steps.cpu-cores.outputs.count }} --config ${{ env.BUILD_TYPE }} `
-            --target openvino_intel_cpu_plugin openvino_ir_frontend benchmark_app sea_itt_lib
+          cmake --build ${{ env.BUILD_DIR }} --parallel --config ${{ env.CMAKE_BUILD_TYPE }}
+          cmake --build ${{ env.BUILD_DIR }} --parallel --config ${{ env.CMAKE_BUILD_TYPE }} --target sea_itt_lib
 
-      - name: List bin files
-        shell: cmd
-        run: dir ${{ env.OPENVINO_REPO }}\bin\ /s
-
-      - name: Code usage analysis
-        shell: cmd
-        working-directory: ${{ env.OPENVINO_REPO }}
+      - name: Cmake install - OpenVINO
         run: |
-          set path=%path%;${{ env.OPENVINO_REPO }}\temp\tbb\bin
-          call "${{ env.VCVARSPATH }}" && python thirdparty\itt_collector\runtool\sea_runtool.py --bindir ${{ env.OPENVINO_REPO }}\bin\intel64\${{ env.BUILD_TYPE }} -o ${{ env.BUILD_DIR }}\itt_stat ! ${{ env.OPENVINO_REPO }}\bin\intel64\${{ env.BUILD_TYPE }}\benchmark_app.exe -niter 1 -nireq 1 -m ${{ env.MODELS_PATH }}\models\test_model\test_model_fp32.xml -d CPU
+          cmake -DCMAKE_INSTALL_PREFIX=${{ env.INSTALL_DIR }} -P ${{ env.BUILD_DIR }}/cmake_install.cmake
 
-      - name: List csv files
-        shell: cmd
-        run: dir ${{ env.BUILD_DIR }}\*.csv /s /p
-
-      - name: CMake CC ON
+      - name: Build C++ samples - OpenVINO build tree
         run: |
-          & "${{ env.VCVARSPATH }}" x64 && cmake -G "Visual Studio 17 2022" `
-            -DCMAKE_VERBOSE_MAKEFILE=ON `
-            -DENABLE_CPPLINT=OFF `
-            -DENABLE_GAPI_PREPROCESSING=OFF `
-            -DENABLE_PROFILING_ITT=OFF `
-            -DSELECTIVE_BUILD=ON `
-            -DCMAKE_COMPILE_WARNING_AS_ERROR=OFF `
-            -DSELECTIVE_BUILD_STAT=${{ env.BUILD_DIR }}\*.csv `
-            -S ${{ env.OPENVINO_REPO }} `
-            -B ${{ env.BUILD_DIR_2 }}
+          cmake -G "${{ env.CMAKE_GENERATOR }}" -DOpenVINO_DIR=${{ env.BUILD_DIR }} -S ${{ env.INSTALL_DIR }}/samples/cpp -B ${{ env.BUILD_DIR }}/cpp_samples
+          cmake --build ${{ env.BUILD_DIR }}/cpp_samples --parallel --config ${{ env.CMAKE_BUILD_TYPE }} --target hello_query_device
 
-      - name: Build CC ON
-        run: |
-          & "${{ env.VCVARSPATH }}" x64 && cmake --build ${{ env.BUILD_DIR_2 }} --parallel ${{ steps.cpu-cores.outputs.count }} --config ${{ env.BUILD_TYPE }} `
-            --target openvino_intel_cpu_plugin openvino_ir_frontend benchmark_app
+      - name: Build C samples - OpenVINO install tree
+        run: & ${{ env.INSTALL_DIR }}/samples/c/build_samples_msvc.bat -i ${{ env.INSTALL_DIR }} -b ${{ env.BUILD_DIR }}/c_samples
 
-      - name: List bin files ON
-        shell: cmd
-        run: dir ${{ env.OPENVINO_REPO }}\bin\ /s
+      - name: Ctest - OpenVINO unit tests
+        run: ctest -C ${{ env.CMAKE_BUILD_TYPE }} --test-dir ${{ env.BUILD_DIR }} -V -L UNIT
 
-      - name: Check conditional_compilation_gen.h header
-        shell: cmd
-        run: type ${{ env.BUILD_DIR_2 }}\src\common\conditional_compilation\conditional_compilation_gen.h
-
-      - name: Use OpenVINO after CC
+      - name: Perform code tracing via ITT collector
         shell: cmd
         run: |
-          set path=%path%;${{ env.OPENVINO_REPO }}\temp\tbb\bin
-          ${{ env.OPENVINO_REPO }}\bin\intel64\${{ env.BUILD_TYPE }}\benchmark_app.exe -niter 1 -nireq 1 -m ${{ env.MODELS_PATH }}\models\test_model\test_model_fp32.xml -d CPU
+          python3 ${{ env.OPENVINO_REPO }}\thirdparty\itt_collector\runtool\sea_runtool.py ^
+          --bindir ${{ env.OPENVINO_REPO }}\bin\intel64\${{ env.CMAKE_BUILD_TYPE }} ^
+          -o ${{ env.SELECTIVE_BUILD_STAT_DIR }}\itt_stat ! ${{ env.OPENVINO_REPO }}\bin\intel64\${{ env.CMAKE_BUILD_TYPE }}\benchmark_app.exe ^
+          -niter 1 ^
+          -nireq 1 ^
+          -m ${{ env.MODELS_PATH }}\models\test_model\test_model_fp32.xml ^
+          -d CPU
+
+      - name: Pack Artifacts
+        run: |
+          $file=Get-ChildItem -Path "${{ env.SELECTIVE_BUILD_STAT_DIR }}"
+          $compress = @{
+            Path = $file
+            CompressionLevel = "Optimal"
+            DestinationPath = "${{ env.BUILD_DIR }}/openvino_selective_build_stat.zip"
+          }
+          Compress-Archive @compress
+
+          $compress = @{
+            Path = "${{ env.OPENVINO_REPO }}/bin/intel64/${{ env.CMAKE_BUILD_TYPE }}/ov_cpu_func_tests", "${{ env.OPENVINO_REPO }}src/tests/test_utils/functional_test_utils/layer_tests_summary"
+            CompressionLevel = "Optimal"
+            DestinationPath = "${{ env.BUILD_DIR }}/openvino_tests.zip"
+          }
+          Compress-Archive @compress
+
+      - name: Upload selective build statistics package
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: openvino_selective_build_stat
+          path: ${{ env.BUILD_DIR }}/openvino_selective_build_stat.zip
+          if-no-files-found: 'error'
+
+      - name: Upload OpenVINO tests package
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: openvino_tests
+          path: ${{ env.BUILD_DIR }}/openvino_tests.zip
+          if-no-files-found: 'error'
+
+  CC_Build:
+    name: Conditional Compilation
+    needs: Build
+    defaults:
+      run:
+        shell: pwsh
+    runs-on: windows-latest-8-cores
+    env:
+      CMAKE_CXX_COMPILER_LAUNCHER: sccache
+      CMAKE_C_COMPILER_LAUNCHER: sccache
+      OPENVINO_REPO: "${{ github.workspace }}\\openvino"
+      BUILD_DIR: "${{ github.workspace }}\\openvino_build"
+      SELECTIVE_BUILD_STAT_DIR: "${{ github.workspace }}\\selective_build_stat"
+    steps:
+      - name: Clone OpenVINO
+        uses: actions/checkout@v4
+        with:
+          path: 'openvino'
+          submodules: 'true'
+
+      - name: Clone test models
+        uses: actions/checkout@v4
+        with:
+          repository: 'openvinotoolkit/testdata'
+          path: 'testdata'
+          lfs: 'true'
+          ref: 'master'
+#      - name: CMake CC ON
+#        run: |
+#          cmake -G "Visual Studio 17 2022" `
+#            -DCMAKE_VERBOSE_MAKEFILE=ON `
+#            -DENABLE_CPPLINT=OFF `
+#            -DENABLE_GAPI_PREPROCESSING=OFF `
+#            -DENABLE_PROFILING_ITT=OFF `
+#            -DSELECTIVE_BUILD=ON `
+#            -DCMAKE_COMPILE_WARNING_AS_ERROR=OFF `
+#            -DSELECTIVE_BUILD_STAT=${{ env.BUILD_DIR }}\*.csv `
+#            -S ${{ env.OPENVINO_REPO }} `
+#            -B ${{ env.BUILD_DIR_2 }}
+#
+#      - name: Build CC ON
+#        run: |
+#          cmake --build ${{ env.BUILD_DIR_2 }} --parallel --config ${{ env.CMAKE_BUILD_TYPE }} `
+#            --target openvino_intel_cpu_plugin openvino_ir_frontend benchmark_app
+#
+#      - name: List bin files ON
+#        shell: cmd
+#        run: dir ${{ env.OPENVINO_REPO }}\bin\ /s
+#
+#      - name: Check conditional_compilation_gen.h header
+#        shell: cmd
+#        run: type ${{ env.BUILD_DIR_2 }}\src\common\conditional_compilation\conditional_compilation_gen.h
+#
+#      - name: Use OpenVINO after CC
+#        shell: cmd
+#        run: |
+#          set path=%path%;${{ env.OPENVINO_REPO }}\temp\tbb\bin
+#          ${{ env.OPENVINO_REPO }}\bin\intel64\${{ env.CMAKE_BUILD_TYPE }}\benchmark_app.exe -niter 1 -nireq 1 -m ${{ env.MODELS_PATH }}\models\test_model\test_model_fp32.xml -d CPU
