Build lib openvino

--- a/src/bindings/python/src/compatibility/openvino/inference_engine/CMakeLists.txt
+++ b/src/bindings/python/src/compatibility/openvino/inference_engine/CMakeLists.txt
@@ -33,10 +33,8 @@ if(UNUSED_BUT_SET_VARIABLE_SUPPORTED)
     ov_add_compiler_flags(-Wno-unused-but-set-variable)
 endif()
 
-if(AARCH64)
-    if(APPLE)
-        ov_add_compiler_flags(-Wno-shorten-64-to-32)
-    endif()
+if(AARCH64 AND APPLE)
+    ov_add_compiler_flags(-Wno-shorten-64-to-32)
 endif()
 # create target
 
