--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -384,6 +384,12 @@ jobs:
           ${{ env.INSTALL_TEST_DIR }}/ov_cpu_unit_tests --gtest_print_time=1 \
                 --gtest_output=xml:${{ env.INSTALL_TEST_DIR }}/TEST-CPUUnitTests.xml
 
+      - name: SubgraphsDumper tests
+        run: |
+          source ${{ env.INSTALL_DIR }}/setupvars.sh
+          {{ env.INSTALL_TEST_DIR }}/subgraphsDumperTests --gtest_print_time=1 \
+                --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-SubgraphsDumperTests.xml
+
       - name: AUTO unit tests
         run: |
           source ${{ env.INSTALL_DIR }}/setupvars.sh
