--- a/.github/workflows/windows_conditional_compilation.yml
+++ b/.github/workflows/windows_conditional_compilation.yml
@@ -114,8 +114,10 @@ jobs:
           cmake --build ${{ env.BUILD_DIR }} --parallel --config ${{ env.CMAKE_BUILD_TYPE }} --target sea_itt_lib
 
       - name: Cmake install - OpenVINO
+        continue-on-error: true
         run: |
           cmake -DCMAKE_INSTALL_PREFIX=${{ env.INSTALL_DIR }} -P ${{ env.BUILD_DIR }}/cmake_install.cmake
+          cmake -DCMAKE_INSTALL_PREFIX=${{ env.INSTALL_DIR }} -DCOMPONENT=tbb -P ${{ env.BUILD_DIR }}/cmake_install.cmake
 
       - name: Build C++ samples - OpenVINO build tree
         run: |
@@ -151,6 +153,10 @@ jobs:
         shell: cmd
         run: dir ${{ env.OPENVINO_REPO }}\bin\ /s
 
+      - name: List install files
+        shell: cmd
+        run: dir ${{ env.INSTALL_DIR }} /s
+
       - name: Pack Artifacts
         continue-on-error: true
         run: |
@@ -163,7 +169,7 @@ jobs:
           Compress-Archive @compress
 
           $compress = @{
-            Path = "${{ env.OPENVINO_REPO }}/bin/intel64/${{ env.CMAKE_BUILD_TYPE }}/ov_cpu_func_tests.exe", "${{ env.OPENVINO_REPO }}/src/tests/test_utils/functional_test_utils/layer_tests_summary"
+            Path = "${{ env.OPENVINO_REPO }}/bin/intel64/${{ env.CMAKE_BUILD_TYPE }}/ov_cpu_func_tests.exe", "${{ env.OPENVINO_REPO }}/src/tests/test_utils/functional_test_utils/layer_tests_summary", "${{ env.INSTALL_DIR }}/tbb"
             CompressionLevel = "Optimal"
             DestinationPath = "${{ env.BUILD_DIR }}/openvino_tests.zip"
           }
@@ -252,7 +258,9 @@ jobs:
 
       - name: Run with CC-ed runtime
         shell: cmd
-        run: ${{ env.OPENVINO_REPO }}\bin\intel64\${{ env.CMAKE_BUILD_TYPE }}\benchmark_app.exe -niter 1 -nireq 1 -m ${{ env.MODELS_PATH }}\models\test_model\test_model_fp32.xml -d CPU
+        run: |
+          set path=%path%;${{ env.OPENVINO_REPO }}\temp\tbb\bin
+          ${{ env.OPENVINO_REPO }}\bin\intel64\${{ env.CMAKE_BUILD_TYPE }}\benchmark_app.exe -niter 1 -nireq 1 -m ${{ env.MODELS_PATH }}\models\test_model\test_model_fp32.xml -d CPU
 
   CPU_Functional_Tests:
     name: CPU functional tests
@@ -264,7 +272,7 @@ jobs:
     runs-on: windows-latest-8-cores
     env:
       INSTALL_TEST_DIR: "${{ github.workspace }}\\tests_install"
-      PARALLEL_TEST_SCRIPT: "${{ github.workspace }}\\tests_install\\src\\tests\\test_utils\\functional_test_utils\\layer_tests_summary\\run_parallel.py"
+      PARALLEL_TEST_SCRIPT: "${{ github.workspace }}\\tests_install\\layer_tests_summary\\run_parallel.py"
       PARALLEL_TEST_CACHE: "${{ github.workspace }}\\tests_install\\test_cache.lst"
 
     steps:
@@ -282,7 +290,7 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Install python dependencies for run_parallel.py
-        run: python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/src/tests/test_utils/functional_test_utils/layer_tests_summary/requirements.txt
+        run: python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/layer_tests_summary/requirements.txt
 
       # Windows pipeline is in nightly mode, uncomment once there is a consistent cache creation
       # - name: Restore tests execution time
@@ -295,8 +303,10 @@ jobs:
 
       - name: Intel CPU plugin func tests (parallel)
         shell: cmd
-        run: python3 ${{ env.PARALLEL_TEST_SCRIPT }} -e ${{ env.INSTALL_TEST_DIR }}\bin\intel64\Release\ov_cpu_func_tests.exe -w ${{ env.INSTALL_TEST_DIR }} -s suite -rf 0 -- --gtest_print_time=1 --gtest_filter=*smoke*
-        timeout-minutes: 40
+        run: |
+          set path=%path%;${{ env.INSTALL_TEST_DIR }}\tbb\bin;${{ env.INSTALL_TEST_DIR }}\tbb
+          python3 ${{ env.PARALLEL_TEST_SCRIPT }} -e ${{ env.INSTALL_TEST_DIR }}\ov_cpu_func_tests.exe -w ${{ env.INSTALL_TEST_DIR }} -s suite -rf 0 -- --gtest_print_time=1 --gtest_filter=*smoke*
+        timeout-minutes: 45
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
