--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -390,6 +390,12 @@ jobs:
           {{ env.INSTALL_TEST_DIR }}/subgraphsDumperTests --gtest_print_time=1 \
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-SubgraphsDumperTests.xml
 
+      - name: Template OpImpl tests
+        run: |
+          source ${{ env.INSTALL_DIR }}/setupvars.sh
+          {{ env.INSTALL_TEST_DIR }}/conformanceTests --gtest_print_time=1 --device=TEMPLATE --gtest_filter="*OpImpl*" \
+                --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-TemplateOpImplTests.xml
+
       - name: AUTO unit tests
         run: |
           source ${{ env.INSTALL_DIR }}/setupvars.sh
