--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(layer_tests)
 add_subdirectory(model_hub_tests)
 add_subdirectory(samples_tests)
 add_subdirectory(e2e_oss)
+add_subdirectory(utils)
